2009-04-18  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-18  Richard Guenther  <rguenther@suse.de>

	PR middle-end/39804
	* gcc.target/i386/pr39804.c: New testcase.

2009-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/i386/pr39496.c: Compile with -mtune=i686.
	* g++.dg/other/pr39496.C: Likewise.

2009-04-15  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	PR tree-optimization/39764
	* g++.dg/torture/pr39764.C: New testcase.

2009-04-14  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39678
	* g++.dg/torture/pr39678.C: New.
	* gcc.dg/compat/struct-complex-2.h: Likewise.
	* gcc.dg/compat/struct-complex-2_main.c: Likewise.
	* gcc.dg/compat/struct-complex-2_x.c: Likewise.
	* gcc.dg/compat/struct-complex-2_y.c: Likewise.
	* gcc.dg/torture/pr39678.c: Likewise.
	* gcc.target/i386/pr39678.c: Likewise.

	* gcc.dg/compat/struct-complex-1_x.c: Add -Wno-psabi.
	* gcc.dg/compat/struct-complex-1_y.c: Likewise.

	* gcc.target/x86_64/abi/test_passing_structs.c: Include
	<complex.h>.  Add tests for structure with complex float.

2009-04-14  Jason Merrill  <jason@redhat.com>

	PR c++/39763
	* g++.dg/warn/Wshadow-4.C: Extend.

2009-04-14  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-04-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/39740
	* gcc.target/alpha/pr39740.c: New test.

2009-04-13  Jason Merrill  <jason@redhat.com>

	PR c++/39480
	* g++.dg/init/copy7.C: New.

	PR c++/39750
	* g++.dg/template/crash90.C: New.

2009-04-12  Jason Merrill  <jason@redhat.com>

	PR c++/39742
	* g++.dg/overload/extern-C-2.C: New.

2009-04-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39713
	* g++.dg/torture/pr39713.C: New testcase.

2009-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/28301
	* g++.dg/cpp0x/enum2.C: Updated.
	* g++.dg/debug/pr22514.C: Likewise.