@@ -255,17 +255,17 @@ proc prune_gnat_output { text } {
 
 proc local_find_gnatmake {} {
     global tool_root_dir
-    
+
     if ![is_remote host] {
         set file [lookfor_file $tool_root_dir gnatmake]
         if { $file == "" } {
-       set file [lookfor_file $tool_root_dir gcc/gnatmake]
+    	set file [lookfor_file $tool_root_dir gcc/gnatmake]
         }
         if { $file != "" } {
-       set root [file dirname $file]
-       set CC "$file --GCC=$root/xgcc --GNATBIND=$root/gnatbind --GNATLINK=$root/gnatlink -cargs -B$root -largs -B$root -margs -B$root";
+    	set root [file dirname $file]
+    	set CC "$file --GCC=$root/xgcc --GNATBIND=$root/gnatbind --GNATLINK=$root/gnatlink -cargs -B$root -largs --LINK=$root/xgcc -B$root -margs";
         } else {
-       set CC [transform gnatmake]
+    	set CC [transform gnatmake]
         }
     } else {
         set CC [transform gnatmake]
