@@ -1,3 +1,8 @@
+2009-04-19  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* lib/gnat.exp (local_find_gnatmake): Pass --LINK to gnatlink.
+	Do not pass -B$root after -margs.
+
 2009-04-18  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
